tests/Checker/everything/errors/5e.vc
int main() {
    f();
    return 1;
}
